fix(core/modal): remove modal override backdrop z-index classname

--- a/packages/core/src/modal/_modal-styles.scss
+++ b/packages/core/src/modal/_modal-styles.scss
@@ -81,10 +81,6 @@ $modalSizes: (
     @include _full-screen();
   }
 
-  &__overlay {
-    z-index: z-index.get(modal);
-  }
-
   &__content-wrapper {
     display: flex;
     justify-content: center;
